Stop showing warning of fetch on "scripts"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Set up Installed nvm",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "node --no-warnings main.js",
     "test": "jest"
   },
   "repository": {
